# ignitesol.security-infra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bumblebee-scan.yml  license-tracker.yml  security-scan.yml  self-test.yml
config/: catalog-pin.txt
config/defaults/: gitleaks.toml  semgrep.yml  trivy.yaml
docs/: ADOPTION.md  OPERATIONS.md  PLAN.md  PREREQUISITES.md
examples/: caller-compliance.yml  cron-suggestions.md  security-config.yml
scripts/secinfra/: bumblebee_report.py  license_report.py  onboard.py  security_report.py
scripts/secinfra/common/: config.py  github.py  mailer.py  render.py  sarif.py
scripts/secinfra/templates/: bumblebee.html.j2  bumblebee.txt.j2  license.html.j2  license.txt.j2  security.html.j2  security.txt.j2
templates/: base.html.j2  base.txt.j2
