[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secinfra"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-data]
secinfra = ["templates/*.j2"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
